[gd_scene load_steps=5 format=2]

[ext_resource path="res://environment/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://misc/Train.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/UpgradeScreen.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "scroll"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TileMap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 592, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TileMap2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -592, 0 ), Vector2( 0, 0 ) ]
}

[node name="UpgradeScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
position = Vector2( 592, 0 )
tile_data = PoolIntArray( -524314, 2, 0, -524301, 2, 0, -589813, 2, 0, -327692, 4, 0, -393212, 2, 0, -393207, 4, 0, -131080, 1, 0, -196599, 1, 0, -65549, 2, 0, -65539, 2, 0, -131069, 1, 0, 131019, 4, 0, 131056, 4, 0, 131063, 2, 0, 131067, 4, 0, 131080, 2, 0, 262140, 1, 0, 196611, 2, 0, 327657, 2, 0, 327668, 2, 0, 262158, 2, 0, 524269, -1610612710, 0, 524270, -1610612710, 0, 524271, -1610612710, 0, 524272, -1610612710, 0, 524273, -1610612710, 0, 524274, -1610612710, 0, 524275, -1610612710, 0, 524276, -1610612710, 0, 524277, -1610612710, 0, 524278, -1610612710, 0, 524279, -1610612710, 0, 524280, -1610612710, 0, 524281, -1610612710, 0, 524282, -1610612710, 0, 524283, -1610612710, 0, 524284, -1610612710, 0, 524285, -1610612710, 0, 524286, -1610612710, 0, 524287, -1610612710, 0, 458752, -1610612710, 0, 458753, -1610612710, 0, 458754, -1610612710, 0, 458755, -1610612710, 0, 458756, -1610612710, 0, 458757, -1610612710, 0, 458758, -1610612710, 0, 458759, -1610612710, 0, 458760, -1610612710, 0, 458761, -1610612710, 0, 458762, -1610612710, 0, 458763, -1610612710, 0, 458764, -1610612710, 0, 458765, -1610612710, 0, 458766, -1610612710, 0, 458767, -1610612710, 0, 458768, -1610612710, 0, 458769, -1610612710, 0 )

[node name="TileMap2" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -524301, 2, 0, -327692, 4, 0, -393212, 2, 0, -393207, 4, 0, -131080, 1, 0, -196599, 1, 0, -65549, 2, 0, -65539, 2, 0, -131069, 1, 0, 131063, 2, 0, 131067, 4, 0, 131080, 2, 0, 262140, 1, 0, 196611, 2, 0, 327668, 2, 0, 524269, -1610612710, 0, 524270, -1610612710, 0, 524271, -1610612710, 0, 524272, -1610612710, 0, 524273, -1610612710, 0, 524274, -1610612710, 0, 524275, -1610612710, 0, 524276, -1610612710, 0, 524277, -1610612710, 0, 524278, -1610612710, 0, 524279, -1610612710, 0, 524280, -1610612710, 0, 524281, -1610612710, 0, 524282, -1610612710, 0, 524283, -1610612710, 0, 524284, -1610612710, 0, 524285, -1610612710, 0, 524286, -1610612710, 0, 524287, -1610612710, 0, 458752, -1610612710, 0, 458753, -1610612710, 0, 458754, -1610612710, 0, 458755, -1610612710, 0, 458756, -1610612710, 0, 458757, -1610612710, 0, 458758, -1610612710, 0, 458759, -1610612710, 0, 458760, -1610612710, 0, 458761, -1610612710, 0, 458762, -1610612710, 0, 458763, -1610612710, 0, 458764, -1610612710, 0, 458765, -1610612710, 0, 458766, -1610612710, 0, 458767, -1610612710, 0, 458768, -1610612710, 0, 458769, -1610612710, 0 )

[node name="Train" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 106.907 )
visual_only = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "scroll"
anims/scroll = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UpgradeScreen" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer/UpgradeScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.3904
margin_top = -99.6896
margin_right = 29.6096
margin_bottom = -85.6896
text = "Buy Upgrades"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLeft" type="Label" parent="CanvasLayer/UpgradeScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.4064
margin_top = -65.0273
margin_right = 15.5936
margin_bottom = -51.0273
text = "Points: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/UpgradeScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.4594
margin_top = -34.0
margin_right = 24.5406
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeHealth" type="Button" parent="CanvasLayer/UpgradeScreen/GridContainer"]
margin_right = 121.0
margin_bottom = 20.0
text = "Upgrade Health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLabel" type="Label" parent="CanvasLayer/UpgradeScreen/GridContainer/UpgradeHealth"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -7.0
margin_right = 51.0
margin_bottom = 7.0
text = "Cost: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentStat" type="Label" parent="CanvasLayer/UpgradeScreen/GridContainer/UpgradeHealth"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -191.686
margin_top = -7.0
margin_right = -133.686
margin_bottom = 7.0
text = "Health: 1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeSpeed" type="Button" parent="CanvasLayer/UpgradeScreen/GridContainer"]
margin_top = 24.0
margin_right = 121.0
margin_bottom = 44.0
text = "Upgrade Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLabel" type="Label" parent="CanvasLayer/UpgradeScreen/GridContainer/UpgradeSpeed"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -7.0
margin_right = 51.0
margin_bottom = 7.0
text = "Cost: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentStat" type="Label" parent="CanvasLayer/UpgradeScreen/GridContainer/UpgradeSpeed"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -191.811
margin_top = -7.0
margin_right = -133.811
margin_bottom = 7.0
text = "Speed: 1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddWeaponSlot" type="Button" parent="CanvasLayer/UpgradeScreen/GridContainer"]
margin_top = 48.0
margin_right = 121.0
margin_bottom = 68.0
text = "Add Weapon Slot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLabel" type="Label" parent="CanvasLayer/UpgradeScreen/GridContainer/AddWeaponSlot"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 7.0
margin_top = -7.0
margin_right = 51.0
margin_bottom = 7.0
text = "Cost: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentStat" type="Label" parent="CanvasLayer/UpgradeScreen/GridContainer/AddWeaponSlot"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -191.686
margin_top = -7.0
margin_right = -133.686
margin_bottom = 7.0
text = "Slots: 1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="CanvasLayer/UpgradeScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.7939
margin_top = 60.7905
margin_right = 25.2061
margin_bottom = 80.7905
text = "Go to Next Level"
__meta__ = {
"_edit_use_anchors_": false
}
